manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: 82265604-deployment
  namespace: 82265604
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 82265604-app
  template:
    metadata:
      labels:
        app: 82265604-app
    spec:
      containers:
        - name: 82265604-app
          image: ceappacr.azurecr.io/82265604
          ports:
            - containerPort: 8080
