manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 82265604
  namespace: 82265604
spec:
  ports:
    - port: 8080
  selector:
    app: 82265604
